--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ckeditor/ckeditor5-angular": "^2.0.1",
     "@ckeditor/ckeditor5-build-classic": "^23.0.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "angular-ng-autocomplete": "^2.0.5",
     "bootstrap": "^4.4.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
